--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,8 @@ body{
 .hero{
   /* overflow: hidden; */
   position: relative;
-  width: auto;
-  height: auto;
 }
+
 .App{
   max-width: 1755px;
   height: 790px;
@@ -114,3 +113,108 @@ h3 > span > a{
   font-weight: bold;
 }
 
+@media (max-width: 1076px){
+  .main>h1{
+    width: 580px;
+    font-size: 80px;
+    line-height: 117%;
+  }
+}
+
+@media (max-width: 745px){
+  body{
+    padding: 40px;
+    /* min-width: 30px; */
+  }
+
+  .App{
+    width: 600px;
+    height: 660px; 
+    border-radius: 10px; 
+  }
+
+  .main>h1{
+    width: 580px;
+    color: white;
+    padding: 0;
+    font-weight: 400;
+    font-size: 85px;
+    line-height: 117%;
+  }
+  
+  .main>h1>span{
+    color: #C0FF3A;
+    font-style: italic;
+    font-weight: bolder;
+  }
+
+  input{
+   display: block;
+  }
+  
+  .input > input[type='text']{
+    width: 350px;
+    height: 60px;
+  }
+  
+  .input > button{
+    width: 120px;
+    height: 60px;
+  }
+  
+  .main{
+    padding: 40px;
+  
+  }
+  
+  .input > button:hover{
+    background:#c1ff3a9d;
+  }
+
+  .circle-bg{
+    top: -17%;
+    right: -22%; 
+
+    height: 800px; 
+    width: 800px;
+    overflow: hidden;
+  }
+}
+
+
+@media (max-width: 678px){
+  body{
+    padding: 0px;
+  }
+
+  .main>h1{
+    width: 340px;
+    font-size: 48px;
+    line-height: 117%;
+    margin-top: 300px;
+  }
+
+  .input{
+    display: block;
+  }
+
+  .input > input {
+    margin-bottom: 30px;
+  }
+
+  .App{
+    appearance: none;
+    width: 120%;
+    height: 0; 
+    border-radius: 0; 
+    background: transparent;
+    margin-left:0;
+    margin-right: 0;
+  }
+
+  .circle-bg{
+    /* top: -17%;
+    right: -22%;  */
+    display: none;
+  }
+}
