--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,11 @@ body{
   border-radius: 39px;
   margin-left:auto;
   margin-right: auto;
-
+  border-style: solid;
+  border-width: 1px;
+  border: linear-gradient(136.47deg, #92ECB6 4.34%, rgba(34, 180, 75, 0.79) 100%) 1;
 }
+
 
 .circle-bg{
   overflow:hidden;
@@ -191,7 +194,7 @@ h3 > span > a{
     width: 340px;
     font-size: 48px;
     line-height: 117%;
-    margin-top: 300px;
+    margin-top: 230px;
   }
 
   .input{
@@ -203,13 +206,12 @@ h3 > span > a{
   }
 
   .App{
-    appearance: none;
-    width: 120%;
-    height: 0; 
-    border-radius: 0; 
-    background: transparent;
+
+    width: 100%;
+    height: 60px; 
     margin-left:0;
     margin-right: 0;
+    margin-top: 20px;
   }
 
   .circle-bg{
